# smart-warehouse-rtk

./: .env  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  demo_seed.sql  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_data.sql
alembic/: env.py
alembic/versions/: 01b1105a9213_create_warehouses.py  0618a68a9abf_добавлена_таблица_alarms.py  07587bd50dd0_fix_fks_types.py  0889ccf2dfb9_описание_изменений.py  09d1a59091ab_enums.py  13a9b63b0828_address_in_warehouse.py  144a26a8c705_оптимизация.py  1c17ac83f117_.py  206790de3441_init.py  22d3ca71e396_после_миграции_с_redis.py  252067ee0c38_add_predict_at_ta.py  37e2309e6dd4_edit_warehouse.py  38773a2498f2_добавлена_модель_user.py  46624abbe099_add_last_scanned_at_to_prods.py  56464b1055e1_initial.py  56d94943cc9c_обязательное_поле_stock.py  5e826abc7fd2_create_predict_at_table.py  5f1d461aa50f_add_predict_at_table.py  62f8f50ede0a_create_predict_at_table.py  6500004d4fdc_убрал_автоудаление_записей.py  68cb640b0c7e_lazy.py  6b6a93f99628_add_stock_in_porduct.py  763f1f329bb5_initial.py  7c94140fa71c_initial_schema.py  7ce3d8cecbcd_initial_schema.py  85770d1a5e30_add_predict_at_tabl.py  915271b2c2d8_миграция.py  919c77b4b983_добавление_табилицы_robothistory.py  9c2becefa223_изменения_захара.py  9cdfb9fc94ed_relations_warehouse_and_robot.py  9fe85ae44113_добавлена_таблица_для_status_роботов.py  a0dc97b307b9_добавлен_статус_товара.py  a3b0e6cdb5f9_edit_shelf_to_str.py  a725b47e1f0d_edit_inventoryhistory.py  a753f9584e74_устал.py  a76da06d23e1_.py  a8c503d754ef_add_inventory_history_with_fks_to_.py  ab63daccc232_add_inventory_history_with_fks_to_.py  alf5095e7082f9_add_last_scanned_at_to_products.py  b0380714d6e5_dddddd.py  (+15 more)
app/: demo_seed.sql  main.py
app/api/: dependencies.py  (+2 more)
docsAPI/: asyncapi.yaml
frontend/: package.json  tailwind.config.js  vite.config.ts
models_store/: PROD_DEMO.pkl
src/: App.tsx  index.css
(+220 files in other folders)
