# pyproject.toml
[project]
name = "smart-warehouse-backend"
version = "1.0.0"
description = "Smart Warehouse Backend with Keycloak 26 Auth"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-keycloak>=5.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "cryptography>=46.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.27.0",           # ← для асинхронного backend
    "psycopg2-binary>=2.9.0",    # ← для Alembic (обязательно!)
    "alembic>=1.13.0",
]