[project]
name = "myapp"
version = "0.1.0"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4",
  "alembic>=1.13",
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "PyJWT>=2.8",
  "httpx==0.27.2",
  "janus>=1.0",
  "python-keycloak>=5.0.0",
  "python-multipart>=0.0.6",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
