[project]
name = "myapp"
version = "0.1.0"
dependencies = [
  "aioredis>=2.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.2",
  "SQLAlchemy==2.0.36",
  "greenlet==3.0.3",
  "psycopg[binary]==3.2.1",
  "asyncpg>=0.29",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4",
  "alembic>=1.13",
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "PyJWT>=2.8",
  "httpx==0.27.2",
  "janus>=1.0",
  "python-keycloak>=5.0.0",
  "python-multipart>=0.0.6",
  "websockets>=12.0",
  "redis>=5",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "xlsxwriter>=3.1.0",
  "reportlab>=4.0.0"
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
